--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,11 +10,11 @@ spring:
       ddl-auto: none
     properties:
       hibernate:
-        show_sql: true
+#        show_sql: true
         format_sql: true
         default_batch_fetch_size: 100
     open-in-view: false
-#logging:
-#  level:
-#    org.hibernate.SQL : debug
+logging:
+  level:
+    org.hibernate.SQL : debug
 #    org.hibernate.type: trace
