--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,10 +7,11 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: create
     properties:
       hibernate:
-#        show_sql: true
+        dialect: org.hibernate.dialect.H2Dialect
+        show_sql: true
         format_sql: true
         default_batch_fetch_size: 100
     open-in-view: false
