--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,13 @@
 spring:
   datasource:
-    url: jdbc:h2:tcp://localhost/~/school
+    url: jdbc:h2:tcp://localhost/~/scoremanage
     username: sa
     password:
     driver-class-name: org.h2.Driver
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
     properties:
       hibernate:
         dialect: org.hibernate.dialect.H2Dialect
@@ -15,7 +15,7 @@ spring:
         format_sql: true
         default_batch_fetch_size: 100
     open-in-view: false
-logging:
-  level:
-    org.hibernate.SQL : debug
+#logging:
+#  level:
+#    org.hibernate.SQL : debug
 #    org.hibernate.type: trace
