--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,10 +11,14 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.H2Dialect
-        show_sql: true
-        format_sql: true
+#        show_sql: true
+#        format_sql: true
         default_batch_fetch_size: 100
     open-in-view: false
+
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
 #logging:
 #  level:
 #    org.hibernate.SQL : debug
